--- a/style.css
+++ b/style.css
@@ -61,8 +61,7 @@ input[type=text], select, textarea{
   }
 
 body{
-    background-image: url(R.jpg)
-    ;
+    background-image: url(R.jpg);
    
     color: rgb(45, 252, 76);
 }
